# Kinect

./: CMakeLists.txt  README
src/KinectSubsystem/: CMakeLists.txt  Kinect.cpp  Kinect.h  KinectSubsystem.cpp  KinectSubsystem.h  KinectSubsystem.scons  Kinectdllmain.cpp  Kinectdllmain.h  SConstruct
src/demo/: CMakeLists.txt  SConstruct  kinect_demo.cpp  kinect_demo.h  kinect_demo.scons
src/demo_3d/: CMakeLists.txt  FPSCamera.cpp  FPSCamera.h  PlayState.cpp  PlayState.h  kinect_demo.h  kinect_demo.scons  kinect_demo_3d.cpp
